Adding more routes in and fixing some issues
