# backend/routes/person.js
@@ -8,4 +8,8 @@ routes.get('/:username', personController.getPerson);
 
 routes.post('/', personController.create);
 
+routes.put('/:username', personController.updatePerson);
+
+routes.delete('/:username', personController.deletePerson);
+
 module.exports = routes;
